sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value lg
	for (i<-0 to lg-2){
                     ^AlgBubbleSort1:11: error: type mismatch;
 found   : Unit
 required: Boolean
}while (swap=true)
            ^